# uvws

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  pyproject.toml  release-please-config.json  tox.ini
.github/workflows/: 00_commit-format.yml  ci.yml  release-please.yml
src/uvws/: __init__.py  foo.py
