[project]
name = "uvws"
version = "0.7.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Todd Jacobsen", email = "yolabingo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.3.0",
    "core",
    "dunk>=0.5.0b0",
    "invoke>=2.2.0",
]

[project.scripts]
uvws = "uvws:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/core", "packages/svc1"]

[tool.uv.sources]
core = { workspace = true }
svc1 = { workspace = true }

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=packages --cov-report=xml"
